# gf2x

./: BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.svn-tree  TODO  acinclude.m4  aclocal.m4  bench.c  boilerplate  configure  configure.ac  fft.c  gf2x.c  gf2x.h  inject-ntl-5.4.2  no-distribute.txt  ntl_gf2x_mul_code.h  toom.c  toom2.c  wipeout-autotools
already_tuned/coreihwl/: gf2x-thresholds.h  gf2x_mul1.h  gf2x_mul2.h  gf2x_mul3.h  gf2x_mul4.h  gf2x_mul5.h  gf2x_mul6.h  gf2x_mul9.h
already_tuned/generic32/: gf2x-thresholds.h
already_tuned/generic64/: gf2x-thresholds.h  gf2x_mul1.h
already_tuned/opteron/: gf2x-thresholds.h
already_tuned/x86_64/: gf2x-thresholds.h  gf2x_mul1.h  gf2x_mul2.h
already_tuned/x86_64_pclmul/: gf2x-thresholds.h  gf2x_mul2.h
already_tuned/x86_sse2/: gf2x-thresholds.h  gf2x_mul1.h
apps/: Makefile.in  factor.cpp  halfgcd.cpp  halfgcd.hpp
config/: acinclude.m4  ltmain.sh
gf2x/: gf2x-config.h.in  gf2x-impl.h  gf2x-small.h  gf2x-tfft.h
hardware/generic/: gf2x-thresholds.h  gf2x_mul2.h  gf2x_mul3.h  gf2x_mul4.h
hardware/generic32/: gf2x_mul1.h
hardware/generic64/: gf2x_mul1.h
hardware/opteron/: gf2x-thresholds.h  gf2x_mul1.h
hardware/x86_64/: gf2x-thresholds.h  gf2x_mul2.h
hardware/x86_64_pclmul/: gf2x_mul1.h  gf2x_mul2.h
hardware/x86_sse2/: gf2x-thresholds.h  gf2x_mul1.h  gf2x_mul3.h  gf2x_mul4.h
src/: Makefile.am  README.adding_code  gen_bb_mul_code.c  generate-test-list.pl  mul1cl.c  mul2cl.c  mul2cl2.c  mul2k.c  mul2t.c  mul2t2.c  mul3cl.c  mul3k.c  mul3k2.c  mul3k3.c  mul3t.c  mul4cl1.c  mul4clk.c  mul4k.c  mul4t.c  mul5clk_c.c  mul5k3.c  mul5k_a.c  mul5k_b.c  mul5k_c.c  mul5k_d.c  mul6clk2.c  mul6k_a.c  mul6k_b.c  mul6k_c.c  mul7cl.c  mul7k.c  mul7k3.c  mul8k.c  mul9cl.c  mul9clk2.c  mul9k.c  mul9k2.c  mul9k3.c  replace.c  replace.h  (+11 more)
tests/: Makefile.am  Makefile.in  check-addmul.c  check-mul.c  do-check-mul.sh
tuning/: Makefile.am  Makefile.in  README  gen_bb_mul_code.c  mul1_avx.c  mul1cl.c  mul2cl.c  mul2k.c  mul2t.c  mul3k.c  mul3t.c  mul4k.c  mul4t.c  replace.c  replace.h  timing.c  timing.h  tune-lowlevel.pl  tunefft.c  tunetoom.c  tuneup.c  tuning-common.c  tuning-common.h  tuning_undefs_pre.h  update-thresholds.c
